# Zengine

./: .gitignore  README.md  pyproject.toml  ze_token_testing
Notes/: plane_vertices.txt
asset_collection/Images/: Car01.aseprite
asset_collection/Models/: land01.blend  land01.blend1
asset_collection/shaders/: basic.frag  basic.vert  lit.frag  lit.vert  phong.frag
backups/race2d/: race2d.py
tests/: ecs_test.py  muscle2d.py  opengl_orthogonal_test.py  opengl_perspective_test.py  scene_graph_test.py  sketch1.py  top_down_test.py  topdown_test.py  window_test.py  world_test.py
tests/assets/bkp/: basic.frag  basic.vert  ecs_test.py  ecs_test2.py  flat_color.frag  flat_color.vert  lit.frag  phong.frag  top_down_test2.py  top_down_test3.py  top_down_test4.py  top_down_test5.py  topdown_test_1.py
tests/assets/images/: PixelCar.aseprite
tests/assets/models/: human1.glb
tests/assets/shaders/: basic.frag  basic.vert
tests/imgui/: cube_simple.glsl  imgui.ini  imgui_test.py  zymgui_test.py
tests/opengl/: sketch1.py
tests/race2d/: race2d.py  race_track_test.py
zengine/animation/: skin_utils.py
zengine/assets/: default_meshes.py  gltf_loader.py  material_asset.py  material_registry.py  mesh_asset.py  mesh_registry.py  skin_asset.py  texture_asset.py  texture_registry.py
zengine/core/: camera.py  engine.py  event_system.py  project_canvas.py  renderer.py  scene.py  window.py
zengine/ecs/: components.py  entity_manager.py
zengine/graphics/: shader.py  texture.py  texture_loader.py
zengine/util/: geometry.py  mesh_factory.py  quaternion.py
(+45 files in other folders)
